fix: br && align-left

--- a/assets/components/list-and-detail.scss
+++ b/assets/components/list-and-detail.scss
@@ -13,7 +13,7 @@
 }
 
 .title {
-  padding-bottom: 30px;
+  padding-bottom: 25px;
   color: white;
 }
 
@@ -26,7 +26,7 @@
 .left {
   /* 置右＋白色 */
   letter-spacing: 3px;
-  text-align: right;
+  text-align: left;
 
   .chinese {
     font-size: 2.0rem;
@@ -46,7 +46,7 @@ a.right {
 
 .activity-layout {
   hr {
-    margin-bottom: 60px;
+    margin-bottom: 70px;
     color: white;
     border: 4px;
     width: 100%;
